@@ -107,13 +107,25 @@ The tcsh pre-installed in Mac OS X has many problems dealing with utf-8.
 If you input mult-bytes characters to tcsh, this patch may help you 
 to edit the characters.<BR><BR>
 Download from <A HREF="ftp://ftp.tba.org.tohoku.ac.jp/pub/tcsh-6.12-utf8.patch.gz"> here </A>
+
+<BR><BR>
+
+<FONT SIZE="4"><STRONG>Interesting Links...</STRONG></FONT><BR>
+Here are some links to some iTerm related websites.<BR>
+<UL>
+<LI><A HREF="http://www.chemistry.ucsc.edu/~wgscott/xtal/terminal_finder_interactions.html">Improving Unix-Finder Interactions in OS X</A> from Professor Scott</LI>
+<LI><A HREF="http://chemistry.ucsc.edu/%7Ewgscott/xtal/iterm_tab_customization.html">iTerm Tab Name Customization</A> from Professor Scott, again :-)</LI>
+<LI><A HREF="http://www.tco.net/%7Edscott/software/itermhere/">iTerm Here</A></LI>
+<LI><A HREF="http://www.hawaii.edu/itsdocs/mac/iterm.pdf">Getting Started with iTerm</A> from University of Hawaii</LI>
+<LI><A HREF="http://www.macosxhints.com/article.php?story=20030609222910699">Use iTerm with OnMyCommand</A> from macosxhints</LI>
+<LI><A HREF="http://www.oikos.com.tw/modules/newbb/viewtopic.php?post_id=70422&topic_id=12038&forum=2#70422">A slightly outdated iTerm tutorial in Traditional Chinese</A></LI>
 </TD>
 </TR>
 </TABLE>
 
 <BR>
 <FONT SIZE="-1">
-Modified: Sep 14th, 2003<BR>Created: Dec 18th, 2002<BR>
+Modified: Sep 27th, 2003<BR>Created: Dec 18th, 2002<BR>
 <A HREF="MAILTO:fabian_at_macvillage_dot_net">Fabian</A> and <A HREF="MAILTO:ujwal_at_setlurgroup_dot_com">Ujwal S. Sathyam</A><BR>
 Support free software by writing one.<BR>
 </FONT>
